src/objects/Price_List_Item_Information__mdt.object
<CustomObject>
    <description>This Custom metadata will contain PLS details  based on product name</description>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Rule__c</fullName>
        <label>Billing Rule</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>APTS_Fixed_Term_PLI</label>
    <pluralLabel>APTS_Fixed_Term_PLIs</pluralLabel>
</CustomObject>